--- a/index.html
+++ b/index.html
@@ -1,64 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AWS Qualified Assessment Test</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <h1>AWS Qualified Test</h1>
-      <button class="top-btn" onclick="openExam()">Start Exam</button>
-      <div style="clear: both"></div>
-    </header>
-
-    <div class="container">
-      <hi></hi>
-      <div class="card">
-        <h2>AWS Qualified Assessment Test</h2>
-        <p>
-          The AWS Qualified Assessment Test is designed to help students and
-          professionals evaluate their knowledge of Amazon Web Services (AWS)
-          fundamentals. This test follows the exam style of AWS Cloud
-          Practitioner / Associate-level certifications, including
-          scenario-based and multiple-choice questions.
-        </p>
-      </div>
-      <div class="card">
-        <h2>Purpose:</h2>
-        <ul>
-          <li>To assess understanding of AWS core concepts</li>
-          <li>To practice exam-style questions</li>
-          <li>
-            To build confidence before attempting official AWS certifications
-          </li>
-        </ul>
-      </div>
-      <div class="card">
-        <h2>Topics Covered:</h2>
-        <ul>
-          <li>AWS Global Infrastructure</li>
-          <li>Core AWS Services (EC2, S3, RDS, Lambda, VPC, IAM, etc.)</li>
-          <li>Security, Identity, and Compliance</li>
-          <li>Billing, Pricing, and Support</li>
-          <li>Cloud Concepts & Best Practices</li>
-        </ul>
-      </div>
-      <div class="card">
-        <h2>Format:</h2>
-        <ul>
-          <li>Number of Questions: 50</li>
-          <li>Type: Multiple-choice / Multiple-response</li>
-          <li>Time Limit: 50 minutes</li>
-          <li>Passing Criteria: 70%</li>
-        </ul>
-      </div>
-    </div>
-
-    <footer>
-      Swarnandhra College of Engineering And Technology | Placement Department
-    </footer>
-    <script src="exam.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>AWS Qualified Assessment Test</title><link rel="stylesheet" href="style.css" /></head><body> <header><h1>AWS Qualified Test</h1><button class="top-btn" onclick="openExam()">Start Exam</button><div style="clear: both"></div></header><div class="container"><hi></hi><div class="card"><h2>AWS Qualified Assessment Test</h2><p>The AWS Qualified Assessment Test is designed to help students and professionals evaluate their knowledge of Amazon Web Services (AWS) fundamentals. This test follows the exam style of AWS Cloud Practitioner / Associate-level certifications, including scenario-based and multiple-choice questions.</p>
+</div><div class="card"><h2>Purpose:</h2><ul><li>To assess understanding of AWS core concepts</li><li>To practice exam-style questions</li><li> To build confidence before attempting official AWS certifications</li></ul></div><div class="card"><h2>Topics Covered:</h2><ul><li>AWS Global Infrastructure</li><li>Core AWS Services (EC2, S3, RDS, Lambda, VPC, IAM, etc.)</li><li>Security, Identity, and Compliance</li><li>Billing, Pricing, and Support</li><li>Cloud Concepts & Best Practices</li></ul>
+</div><div class="card"><h2>Format:</h2><ul><li>Number of Questions: 50</li><li>Type: Multiple-choice / Multiple-response</li><li>Time Limit: 50 minutes</li> <li>Passing Criteria: 70%</li> </ul> </div> </div> <footer>Swarnandhra College of Engineering And Technology | Placement Department </footer>
+<script src="exam.js"></script></body></html>
